# ClangSharp

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  ClangSharp.csproj  ClangSharp.sln  ClangSharp.slnx  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Extensions.cs  Generated.Custom.cs  Generated.cs  LICENSE.md  LICENSE.txt  NuGet.config  README.md  build.bat  build.cmd  build.sh  build.sh.bat  exclusion.dic  global.json  pack.cmd  qcls  restore.cmd  test.cmd
.github/: copilot-instructions.md
.github/workflows/: ci.yml  regenerate-native.yml
ClangSharp/: ClangSharp.csproj  ClangSharp.sln  ClangSharp.targets  Extensions.cs  Generated.Custom.cs  Generated.cs  StringReturnMarshaller.cs
ClangSharp.PInvokeGenerator/: ClangSharp.PInvokeGenerator.csproj  ConfigurationOptions.cs  CursorWriter.cs  Diagnostic.cs  OutputBuilder.cs  PInvokeGenerator.cs  PInvokeGeneratorConfiguration.cs  PInvokeGeneratorConfigurationOptions.cs  Program.cs
ClangSharp.PInvokeGenerator.Test/: ClangSharp.PInvokeGenerator.Test.csproj  EnumDeclarationTest.cs  FunctionDeclarationBodyImportTest.cs  FunctionDeclarationDllImportTest.cs  PInvokeGeneratorTest.cs  StructDeclarationTest.cs  TemporaryFile.cs  VarDeclarationTest.cs
ClangSharp.PInvokeGenerator/Cursors/: Cursor.cs  TranslationUnit.cs
ClangSharp.PInvokeGenerator/Types/: Type.cs
ClangSharp.Test/: ClangSharp.Test.csproj  ModuleMapDescriptor.cs  TranslationUnit.cs  VirtualFileOverlay.cs
ClangSharp/Extensions/: CXComment.cs  CXCompletionString.cs  CXCursor.cs  CXCursorSet.cs  CXDiagnostic.cs  CXDiagnosticSet.cs  CXFile.cs  CXIndex.cs  CXModule.cs  CXPlatformAvailability.cs  CXSourceLocation.cs  CXSourceRange.cs  CXSourceRangeList.cs  CXString.cs  CXStringSet.cs  CXTUResourceUsage.cs  CXTargetInfo.cs  CXToken.cs  CXTranslationUnit.cs  CXType.cs  CXUnsavedFile.cs
ClangSharp/Properties/: AssemblyInfo.cs
ClangSharpPInvokeGenerator/: AttachedFunctionDeclData.cs  AttachedOperatorData.cs  CXCursorExtensions.cs  CXTypeExtensions.cs  ClangSharp.Extensions.cs  ClangSharpPInvokeGenerator.csproj  ConfigurationOptions.cs  CursorVisitor.cs  CursorWriter.cs  EnumVisitor.cs  Extensions.cs  ForwardDeclarationVisitor.cs  FunctionVisitor.cs  Generated.Custom.cs  Generated.cs  ICXCursorVisitor.cs  OutputBuilder.cs  Program.cs  StructVisitor.cs  TypeDefVisitor.cs
ClangSharpPInvokeGenerator.Test/: ClangSharpPInvokeGenerator.Test.csproj  EnumDeclarationTest.cs  PInvokeGeneratorTest.cs  TemporaryFile.cs
ClangSharpPInvokeGenerator/Cursors/: Cursor.cs  StaticAssert.cs  TranslationUnit.cs
ClangSharpPInvokeGenerator/Properties/: AssemblyInfo.cs  launchSettings.json
ClangSharpPInvokeGenerator/Types/: Type.cs
docs/: generating-bindings-best-practices.md  using-clangsharp-as-a-library.md  xml-binding-format.md
docs/how-to-use-as-libraries/: getting-started.md  index.md
scripts/: SignClientFileList.txt  SignClientFileListNative.txt  azure-pipelines.yml  azure-unix.yml  azure-windows.yml  build.ps1  build.sh  cibuild.cmd  cibuild.sh
sources/: CMakeLists.txt  Directory.Build.props  Directory.Build.targets
sources/ClangSharp/: Capture.cs  ClangSharp.csproj  CompatibilitySuppressions.xml  Generated.Custom.cs  IDeclContext.cs  IMergeable`1.cs  IRedeclarable`1.cs  ITemplateParmPosition.cs  Index.cs  LazyList.cs  LazyList`1.cs  LazyList`2.cs  NativeTypeNameAttribute.cs  StringMarshaler.cs  TemplateArgument.cs  TemplateArgumentLoc.cs  TemplateName.cs  TranslationUnit.cs  ValueLazy`1.cs  ValueLazy`2.cs
sources/ClangSharp.Interop/: CXAvailabilityKind.cs  CXCallingConv.cs  CXChildVisitResult.cs  CXCodeCompleteResults.cs  CXCodeComplete_Flags.cs  CXComment.cs  CXCommentInlineCommandRenderKind.cs  CXCommentKind.cs  CXCommentParamPassDirection.cs  CXCompilationDatabase_Error.cs  CXCompletionChunkKind.cs  CXCompletionContext.cs  CXCompletionResult.cs  CXCursor.cs  CXCursorAndRangeVisitor.cs  CXCursorKind.cs  CXCursorSetImpl.cs  CXCursorVisitor.cs  CXCursor_ExceptionSpecificationKind.cs  CXDiagnosticDisplayOptions.cs  CXDiagnosticSeverity.cs  CXErrorCode.cs  CXEvalResultKind.cs  CXFieldVisitor.cs  CXFileUniqueID.cs  CXGlobalOptFlags.cs  CXIdxAttrInfo.cs  CXIdxAttrKind.cs  CXIdxBaseClassInfo.cs  CXIdxCXXClassDeclInfo.cs  CXIdxContainerInfo.cs  CXIdxDeclInfo.cs  CXIdxDeclInfoFlags.cs  CXIdxEntityCXXTemplateKind.cs  CXIdxEntityInfo.cs  CXIdxEntityKind.cs  CXIdxEntityLanguage.cs  CXIdxEntityRefInfo.cs  CXIdxEntityRefKind.cs  CXIdxIBOutletCollectionAttrInfo.cs  (+83 more)
sources/ClangSharp.PInvokeGenerator/: AccessSpecifier.cs  ClangSharp.PInvokeGenerator.csproj  Diagnostic.cs  DiagnosticLevel.cs  FunctionOrDelegateFlags.cs  GeneratedCodeAttributeMode.cs  GlobPattern.cs  GlobalSuppressions.cs  OutputBuilder.cs  OutputBuilderFactory.cs  PInvokeGenerator.Close.cs  PInvokeGenerator.Equality.cs  PInvokeGenerator.ExternVariable.cs  PInvokeGenerator.Naming.cs  PInvokeGenerator.Predicates.cs  PInvokeGenerator.TypeResolution.cs  PInvokeGenerator.VisitAttr.cs  PInvokeGenerator.VisitComment.cs  PInvokeGenerator.VisitDecl.cs  PInvokeGenerator.VisitObjCDecl.cs  PInvokeGenerator.VisitPreprocessedEntity.cs  PInvokeGenerator.VisitRecordDecl.cs  PInvokeGenerator.VisitRef.cs  PInvokeGenerator.VisitStmt.cs  PInvokeGenerator.VisitVarDecl.cs  PInvokeGenerator.cs  PInvokeGeneratorConfiguration.cs  PInvokeGeneratorConfigurationOptions.cs  PInvokeGeneratorOutputMode.cs  PInvokeGeneratorTransparentStructKind.cs  QualifiedNameComparer.cs  RegexComparer.cs
sources/ClangSharpPInvokeGenerator/: ClangSharpPInvokeGenerator.csproj  CommandLine.cs  CustomHelpBuilder.cs  Program.Options.cs  Program.ResourceDirectory.cs  Program.cs  README.md
sources/libClangSharp/: CIndexDiagnostic.cpp  CIndexDiagnostic.h  CMakeLists.txt  CXCursor.cpp  CXCursor.h  CXLoadedDiagnostic.cpp  CXLoadedDiagnostic.h  CXSourceLocation.cpp  CXSourceLocation.h  CXString.cpp  CXString.h  CXTranslationUnit.cpp  CXTranslationUnit.h  CXType.cpp  CXType.h  ClangSharp.cpp  ClangSharp.h
tests/: Directory.Build.props  Directory.Build.targets
tests/ClangSharp.UnitTests/: .editorconfig  (+14 more)
(+3103 files in other folders)
